--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div *ngIf="user" class="card">
   <div class="card-header">
     <h4 *ngIf="user.name || user.login">
       {{user.name || user.login}}
